# beet-summarize

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  README.md  pyproject.toml  requirements_dev.txt  setup.py  summarize.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: auto-merge-deps.yml  check-build.yml  release-draft.yml  testsuite.yaml
beetsplug/: __init__.py  summarize.py
beetsplug/summarize/: summarize.py
summarize/: __init__.py  summarize.py
tests/: test_summarize.py
