[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
line-length = 88
py36 = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[project]
name = "summarize"
authors = [
    {name = "Steven Murray", email = "steven.g.murray@asu.edu"},
]
description = "Summarize your beets library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    'beets>=1.5.0',
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/steven-murray/beet-summarize"
Changelog = "https://github.com/steven-murray/beet-summarize/releases"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov"
]

dev = [
    "pre-commit",
    "summarize[tests]",
]
